# eflete

./: .clang-format  CMakeLists.txt  CONTRIBUTING  COPYING  Makefile.am  Makefile_Eolian_Helper.am  configure.ac  prepare_debug_build.sh  prepare_release_build.sh
cmake_modules/: eflete_add_test.cmake
data/: Makefile.am
data/template_tizen/: AUTHORS  macros-black.edc  macros-light.edc  macros.edc  sounds.edc  template.edc
data/template_tizen/widgets/: access.edc  bg.edc  bubble.edc  button.edc  check.edc  colorselector.edc  conformant.edc  ctxpopup.edc  datetime.edc  diskselector.edc  entry.edc  index.edc  (+30 more)
m4/: cmb.m4  cmb_binary.m4
patches/: README
patches/efl/: 0001-Edje-Remove-duplicate-NULL-reassignment.patch  0002-Edje-edit-Free-textblock-styles-with-the-proper-func.patch  0003-efl-add-binary-mode-to-fdopen-calls.patch  0004-edje-edje_edit-make-posible-to-unset-the-program-fil.patch  0004-edje_edit.c-it-should-be-able-to-change-item-positio.patch  0005-Edje_Edit-new-API-to-insert-tween-into-specified-pla.patch  0005-edje_edit.c-it-should-be-able-to-change-item-positio.patch  0006-Edje_Edit-ability-to-insert-after-program-into-speci.patch  0006-Edje_Edit-new-API-to-insert-tween-into-specified-pla.patch  0007-Edje_Edit-ability-to-insert-after-program-into-speci.patch  0007-Edje_Edit-fix-warning-on-unsigned-and-signed-int-com.patch  0008-Edje_Edit-fix-defect-found-by-Coverity-in-.state_twe.patch  0008-Edje_Edit-fix-warning-on-unsigned-and-signed-int-com.patch  0009-Edje_Edit-fix-defect-found-by-Coverity-in-.state_twe.patch  0009-Edje_Edit-target-can-be-insert-into-different-place-.patch  0010-Edje_Edit-target-can-be-insert-into-different-place-.patch  0010-Edje_Edit-update-source-generation-to-print-text-cla.patch  0011-Edje_Edit-Edje_Edit-update-source-generation-to-prin.patch  0011-Edje_Edit-update-source-generation-to-print-text-cla.patch  0012-Edje_Edit-Edje_Edit-update-source-generation-to-prin.patch  0012-Edje_Edit-support-use_alternate_font_metrics-setters.patch  0013-Edje_Edit-support-image-border_scale-and-border_scal.patch  0013-Edje_Edit-support-use_alternate_font_metrics-setters.patch  0014-Edje_Edit-return-accidently-removed-clip_to-in-code-.patch  0014-Edje_Edit-support-image-border_scale-and-border_scal.patch  0015-Edje_Edit-return-accidently-removed-clip_to-in-code-.patch  0015-edje_edit-program-s-source-and-signal-CAN-be-NULL.patch  0016-Edje-Reparent-when-swallowing-unswallowing.patch  0016-edje_edit-program-s-source-and-signal-CAN-be-NULL.patch  0017-Edje-Reparent-when-swallowing-unswallowing.patch  0017-edje_edit-add-missing-mempools-on-group-copy.patch  0018-Edje-edit-fix-get-list-of-program-tagrets.patch  0018-edje_edit-add-missing-mempools-on-group-copy.patch  0019-Edje-edit-add-new-program-actions-into-code-generate.patch  0019-Edje-edit-fix-get-list-of-program-tagrets.patch  0020-Edje-edit-add-new-program-actions-into-code-generate.patch  0020-Edje-edit-fix-aspect_preference-value-into-generate-.patch  0021-Edje-edit-fix-aspect_preference-value-into-generate-.patch  0021-edje_edit-fix-mempools-in-group-alias-add.patch  0022-Edje-edit-improve-state-code-generation.patch  (+93 more)
patches/elementary/: 0001-elementary-fix-genlist-tree-filters.patch  0002-manualy-applying-commit-62cf70034de38b17f2025e08f81b.patch  0003-theme-return-enum-from-elm_widget_style_set-instead-.patch
src/: CMakeLists.txt
src/lib/: Makefile.am  ewe_combobox.c  ewe_ruler.c  ewe_ruler.eo
src/lib/elementary_combobox/: Elementary_Combobox.h  Makefile.am  elc_combobox.c  elc_combobox_legacy.h  elm_combobox.eo  elm_combobox.eo.c  elm_combobox.eo.h  elm_combobox.eo.legacy.h  elm_priv.h  elm_widget_combobox.h
src/modules/: CMakeLists.txt
src/modules/filesystem/: filesystem.cpp  filesystem.hpp
src/modules/project/: project.cpp  project.hpp  project.proto  saver.cpp  saver.hpp
src/tests/: CMakeLists.txt
tests/: Makefile.am  utc_common.h
(+24 files in other folders)
